[project]
name = "weimar-tracker"
version = "0.1.0"
description = "Weimar Triangle diplomatic coordination tracker"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = []
# Embedding (pipeline.embed) is optional since stance scoring replaced cosine
# similarity as the primary metric; install with `uv sync --group embed`.
embed = [
    "sentence-transformers>=3.0",
]
# Only used by exploratory notebooks/scripts, not the pipeline.
analysis = [
    "altair>=5.0",
    "pandas>=2.0",
]
