[project]
name = "weimar-tracker"
version = "0.1.0"
description = "Weimar Triangle diplomatic coordination tracker"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "jinja2>=3.1",
    "tqdm>=4.66",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=8.0",
]
# Only used by exploratory notebooks/scripts, not the pipeline.
analysis = [
    "altair>=5.0",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `import pipeline...` resolve from the repo root without an editable install,
# matching how the pipeline modules add ROOT to sys.path at runtime.
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
# Long lines here are embedded content (SVG markup, LLM prompt text), not code
# structure — wrapping mid-string would be noise or risk altering the prompt.
"pipeline/render.py" = ["E501"]
"pipeline/enrich.py" = ["E501"]
